# Network-Recon

./: .gitattributes  .gitignore  README.md  build_exe.bat  build_exe.sh  build_installer.bat  install.bat  install.sh  pyproject.toml
.github/workflows/: build-binaries.yml  release.yml
assets/: README.txt  create_placeholder_icon.py
docs/: account_recovery_guidance.md  assessment_checklist.md  auth_testing_methodology.md  recommended_tools.md  report_template.md
linux/: build_exe.sh  install.sh
scripts/: install.py
src/: check_csrf.py  check_headers.py  check_tls.py  config_manager.py  dns_cache.py  extended_discovery.py  html_report.py  network_logger.py  network_recon.py  report_generator.py  scan_export.py  scan_history.py  security_framework.py
windows/: build_exe.bat  build_installer.bat  install.bat  installer.iss  network_recon.spec
